--- a/atividades/formulario.html
+++ b/atividades/formulario.html
@@ -19,6 +19,13 @@
                 <td><label for="dataNasc">Data de nascimento:</label></td>
                 <td><input type="date" name="nasc" id="dataNasc"></td>
             </tr>
+            <tr>
+                <td></td>
+                <td><input type="submit" value="Enviar">
+                &nbsp;&nbsp;
+                <input type="reset" value="Limpar">
+                </td>
+            </tr>
         </table>
     </form>
 </body>
