--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Página Pessoal do Gabriel Bitencourt</h1>
     <p>
         <a href="exemplos/aulacss.html">aula css</a>
-        <a href="atividades/formulario.html">formulario</a>
+        <a href="atividades/formulario/formulario.html">formulario</a>
     </p>
 </body>
 </html>
