--- a/atividades/formulario/formulario.html
+++ b/atividades/formulario/formulario.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Formulário</h1>
-    <a href="../index.html">Voltar</a>
+    <a href="../../index.html">Voltar</a>
     <form>
         <table>
             <tr>
