Arquivos da atividade de layouts criados

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>
         <a href="exemplos/aulacss.html">aula css</a>
         <a href="atividades/formulario/formulario.html">formulario</a>
+        <a href="atividades/layout/layout.html">layout</a>
     </p>
 </body>
 </html>
