Melhore a visualização da página inicial

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <h1>Página Pessoal do Gabriel Bitencourt</h1>
-    <p>
-        <a href="exemplos/aulacss.html">aula css</a>
-        <a href="atividades/formulario/formulario.html">formulario</a>
-        <a href="atividades/layout/layout.html">layout</a>
-    </p>
+    
+    <fieldset>
+        <legend><h2>Atividades</h2></legend>
+        <p><a href="atividades/formulario/formulario.html">formulario</a></p>
+        <p><a href="atividades/layout/layout.html">layout</a></p>
+    </fieldset>
+
+    <fieldset>
+        <legend><h2>Exemplos</h2></legend>
+        <p><a href="exemplos/aulacss.html">aula css</a></p>
+    </fieldset>
+    
 </body>
 </html>
