Atualize o index.html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     
     <fieldset>
         <legend><h2>Atividades</h2></legend>
-        <p><a href="atividades/formulario/formulario.html">formulario</a></p>
-        <p><a href="atividades/layout/layout.html">layout</a></p>
+        <p><a href="tasks/formulario/formulario.html">formulario</a></p>
+        <p><a href="tasks/layout/layout.html">layout</a></p>
     </fieldset>
 
     <fieldset>
         <legend><h2>Exemplos</h2></legend>
-        <p><a href="exemplos/aulacss/aulacss.html">aula css</a></p>
-        <p><a href="exemplos/aula-17-03-2022-prog/index.html">aula formulario</a></p>
+        <p><a href="examples/aulacss/aulacss.html">aula css</a></p>
+        <p><a href="examples/aula-17-03-2022-prog/index.html">aula formulario</a></p>
     </fieldset>
     
 </body>
